Reference Data Types

--- a/html/task1.html
+++ b/html/task1.html
@@ -30,7 +30,7 @@
    <label>Date:</label>
    <input type="date"><br>
    <label>Type: <input type="radio" name="type" required> Income</label>
-   <label>Type: <input type="radio" name="type" required> Expense</label><br>
+    <input type="radio" name="type" required> Expense<br>
  <input type="submit" value="Add entry"> <br>
  <h3>Budget Summary</h3>
  <table border="" >
