--- a/html/1stday.html
+++ b/html/1stday.html
@@ -8,7 +8,7 @@
 <body>
     <h1 style="background-color: rgb(255, 0, 76);">Hello</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.  <hr> <br>Dolores eveniet <strong>libero</strong> amet sequi tempore nisi error alias sapiente aliquid eligendi?
-
+<h2>Demo of html</h2>
     </p>
 </body>
 </html>
