--- a/html/anchor tag.html
+++ b/html/anchor tag.html
@@ -9,8 +9,11 @@
 <!-- angular tag -->
     <br>
     <h1> Hello</h1>
-    <a  href="https://www.google.com/" title="redirect to google" target="blank"> click here to go to google</a> <br>
-    <a href="www.gmail.com sign in" target="_blank"> click</a>
+    <a  href="https://www.google.com/" title="redirect to google" target="_blank"> click here to go to google</a> <br>
+    <a href="www.gmail.com sign in" target="_self" title="rediret to gmail">click  go to mail</a>
+    <audio src=""></audio>
+    <video src=""></video>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, eaque.
     <!-- <h1>1.Apple</h1>
     <h1>2.Bananna</h1>
     <h1>3.cherry</h1> -->
